# MagnusChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
src/: main.cpp
tests/: CMakeLists.txt
